data/derived/comb/progs/unify/prog0881.ml.out
Characters 327-328:
  let (_, res) = List.fold_right f base (List.rev l) in res;;
                                 ^
Error: This expression has type int * int list -> int -> int * int list
       but an expression was expected of type int * int list -> int -> int
       Type int * int list is not compatible with type int 
